aggiunto media query con annessi offset al mio framework

--- a/index.html
+++ b/index.html
@@ -11,51 +11,147 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-1"> 1 col</div>
-            <div class="col-1"> 1 col</div>
-            <div class="col-1"> 1 col</div>
-            <div class="col-1"> 1 col</div>
-            <div class="col-1"> 1 col</div>
-            <div class="col-1"> 1 col</div>
-            <div class="col-1"> 1 col</div>
-            <div class="col-1"> 1 col</div>
-            <div class="col-1"> 1 col</div>
-            <div class="col-1"> 1 col</div>
-            <div class="col-1"> 1 col</div>
-            <div class="col-1"> 1 col</div>
+            <div class="col-1"> 
+                <div class="box">
+                    1 col
+                </div>
+            </div>
+            <div class="col-1"> 
+                <div class="box">
+                1 col
+                </div>
+            </div>
+            <div class="col-1"> 
+                <div class="box">
+                    1 col
+                </div>
+            </div>
+            <div class="col-1"> 
+                <div class="box">
+                    1 col
+                </div>
+            </div>
+            <div class="col-1"> 
+                <div class="box">
+                    1 col
+                </div>
+            </div>
+            <div class="col-1"> 
+                <div class="box">
+                    1 col
+                </div>
+            </div>
+            <div class="col-1"> 
+                <div class="box">
+                    1 col
+                </div>
+            </div>
+            <div class="col-1"> 
+                <div class="box">
+                    1 col
+                </div>
+            </div>
+            <div class="col-1"> 
+                <div class="box">
+                    1 col
+                </div>
+            </div>
+            <div class="col-1"> 
+                <div class="box">
+                    1 col
+                </div>
+            </div>
+            <div class="col-1"> 
+                <div class="box">
+                    1 col
+                </div>
+            </div>
+            <div class="col-1"> 
+                <div class="box">
+                    1 col
+                </div>
+            </div>
         </div>
         <div class="row">
-            <div class="col-2">2 col</div>
-            <div class="col-5"> 5 col</div>
-            <div class="col-5"> 5 col</div>
+            <div class="col-2"> 
+                <div class="box">
+                1 col
+            </div>
+        </div>
+            <div class="col-5">
+                <div class="box">
+                1 col
+            </div>
+        </div>
+            <div class="col-5"> 
+                <div class="box">
+                1 col
+            </div>
+        </div>
         </div>
         <div class="row">
-            <div class="col-12">12 col</div>
+            <div class="col-12">
+                <div class="box">
+                1 col
+            </div>
+        </div>
         </div>
         <div class="row">
-            <div class="col-8">8 col</div>
-            <div class="col-2">2 col</div>
-            <div class="col-2">2 col</div>    
+            <div class="col-8">
+                <div class="box">
+                1 col
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="box">
+                1 col
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="box">
+                1 col
+                </div>
+            </div>    
         </div>
         <div class="row">
-            <div class="col-1">1 col</div>
-            <div class="col-2">2 col</div>
-            <div class="col-2">2 col</div>
-            <div class="col-6">6 col</div> 
-            <div class="col-1">1 col</div>   
-        </div>
-        <div class="row">
+            <div class="col-1">
+                <div class="box">
+                1 col
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="box">
+                1 col
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="box">
+                1 col
+                </div>
+            </div>
             <div class="col-6">
-                <div class="nested">
-                    <div class="col-2">Nested 2 col</div>
-                    <div class="col-2">Nested 2 col</div>
-                    <div class="col-8">Nested 8 col</div>
+                <div class="box">
+                1 col
+                </div>
+            </div> 
+            <div class="col-1">
+                <div class="box">
+                1 col
+                </div>
+            </div>   
+        </div>
+        <div class="row ">
+            <div class="col-6">
+                <div class="row box">
+                    <div class="col-2"><div class="box-nested">nested 2 col</div></div>
+                    <div class="col-2"><div class="box-nested">nested 2 col</div></div>
+                    <div class="col-8"><div class="box-nested">nested 8 col</div></div>
                 </div> 
             </div>
                 <div class="col-6">
-                    <div class="nested">
-                    <div class="col-6">Nested 6 col</div>
-                    <div class="col-6">Nested 6 col</div>
+                    <div class="box row">
+                    <div class="col-6"><div class="box-nested">nested 6 col</div></div>
+                    <div class="col-6"><div class="box-nested">nested 6 col</div></div>
                 </div> 
             </div>
         </div>
@@ -63,67 +159,67 @@
         <!-- SECONDA SEZIONE DI COLONNE -->
         <div class="container">
             <div class="row">
-                <div class="col-12"></div>
+                <div class="col-12 box"></div>
             </div>
             <div class="row">
-                <div class="col-1"></div>
-                <div class="col-11"></div>
+                <div class="col-1 box"></div>
+                <div class="col-11 box"></div>
             </div>
             <div class="row">
-                <div class="col-2"></div>
-                <div class="col-10"></div>
+                <div class="col-2 box"></div>
+                <div class="col-10 box"></div>
             </div>
             <div class="row">
-                <div class="col-3"></div>
-                <div class="col-9"></div>
+                <div class="col-3 box"></div>
+                <div class="col-9 box"></div>
             </div>
             <div class="row">
-                <div class="col-4"></div>
-                <div class="col-8"></div>
+                <div class="col-4 box"></div>
+                <div class="col-8 box"></div>
             </div>
             <div class="row">
-                <div class="col-5"></div>
-                <div class="col-7"></div>
+                <div class="col-5 box"></div>
+                <div class="col-7 box"></div>
             </div>
             <div class="row">
-                <div class="col-6"></div>
-                <div class="col-6"></div>
+                <div class="col-6 box"></div>
+                <div class="col-6 box"></div>
             </div>
         </div>
         <!-- SEZIONE OFFSET -->
         <div class="container">
             <div class="row">
-                <div class="col-1 col-offset-11 "></div>
+                <div class="col-1 col-offset-11 box "></div>
             </div>
             <div class="row">
-                <div class="col-2 col-offset-10 "></div>
+                <div class="col-2 col-offset-10 box "></div>
             </div>
             <div class="row">
-                <div class="col-3 col-offset-9 "></div>
+                <div class="col-3 col-offset-9 box "></div>
             </div>
             <div class="row">
-                <div class="col-4 col-offset-8 "></div>
+                <div class="col-4 col-offset-8 box"></div>
             </div>
             <div class="row">
-                <div class="col-5 col-offset-7 "></div>
+                <div class="col-5 col-offset-7 box"></div>
             </div>
             <div class="row">
-                <div class="col-6 col-offset-6 "></div>
+                <div class="col-6 col-offset-6 box"></div>
             </div>
             <div class="row">
-                <div class="col-7 col-offset-5 "></div>
+                <div class="col-7 col-offset-5 box"></div>
             </div>
             <div class="row">
-                <div class="col-8 col-offset-4 "></div>
+                <div class="col-8 col-offset-4 box"></div>
             </div>
             <div class="row">
-                <div class="col-9 col-offset-3 "></div>
+                <div class="col-9 col-offset-3 box"></div>
             </div>
             <div class="row">
-                <div class="col-10 col-offset-2 "></div>
+                <div class="col-10 col-offset-2 box "></div>
             </div>
             <div class="row">
-                <div class="col-11 col-offset-1 "></div>
+                <div class="col-11 col-offset-1 box"></div>
             </div>
         </div>
 
